[gd_scene load_steps=6 format=3 uid="uid://b8wfdak1a6f1a"]

[ext_resource type="Script" uid="uid://12ax0nnmisp0" path="res://Scripts/video.gd" id="1_e6lyq"]
[ext_resource type="Texture2D" uid="uid://carxd164g728i" path="res://icon.svg" id="1_or7i0"]
[ext_resource type="Script" uid="uid://deswpj81rgkkm" path="res://Scripts/audio.gd" id="2_cmli1"]
[ext_resource type="Script" uid="uid://c0o42dwelrgoy" path="res://Scripts/MainMenuLvlButton.gd" id="2_mde8h"]
[ext_resource type="PackedScene" uid="uid://cld2whxb42kuv" path="res://Escenas/action_button.tscn" id="3_dkwi6"]

[node name="TestScene" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Settings" type="TabContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Niveles" type="TabBar" parent="UI/Settings"]
layout_mode = 2
metadata/_tab_index = 0

[node name="GridContainer" type="GridContainer" parent="UI/Settings/Niveles"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 3

[node name="Nivel1" type="Button" parent="UI/Settings/Niveles/GridContainer"]
layout_mode = 2
icon = ExtResource("1_or7i0")
script = ExtResource("2_mde8h")

[node name="Nivel2" type="Button" parent="UI/Settings/Niveles/GridContainer"]
layout_mode = 2
icon = ExtResource("1_or7i0")
script = ExtResource("2_mde8h")

[node name="Nivel3" type="Button" parent="UI/Settings/Niveles/GridContainer"]
layout_mode = 2
icon = ExtResource("1_or7i0")
script = ExtResource("2_mde8h")

[node name="Nivel4" type="Button" parent="UI/Settings/Niveles/GridContainer"]
layout_mode = 2
icon = ExtResource("1_or7i0")
script = ExtResource("2_mde8h")

[node name="Nivel5" type="Button" parent="UI/Settings/Niveles/GridContainer"]
layout_mode = 2
icon = ExtResource("1_or7i0")
script = ExtResource("2_mde8h")

[node name="Nivel6" type="Button" parent="UI/Settings/Niveles/GridContainer"]
layout_mode = 2
icon = ExtResource("1_or7i0")
script = ExtResource("2_mde8h")

[node name="Video" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
script = ExtResource("1_e6lyq")
metadata/_tab_index = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -38.5
offset_right = 58.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FullScreen" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "FullScreen"

[node name="Bordeless" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Bordeless"

[node name="Vsync" type="Label" parent="UI/Settings/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Vsync"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FullScreen" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Bordeless" type="CheckBox" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Vsync" type="OptionButton" parent="UI/Settings/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
selected = 1
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptative"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="Audio" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
script = ExtResource("2_cmli1")
metadata/_tab_index = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -38.5
offset_right = 20.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="SFX" type="Label" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Audio/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Music" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="SFX" type="HSlider" parent="UI/Settings/Audio/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Controls" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -52.0
offset_right = 28.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Settings/Controls/HBoxContainer"]
layout_mode = 2

[node name="Up" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "UP"

[node name="Down" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "DOWN"

[node name="Left" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "LEFT"

[node name="Right" type="Label" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "RIGHT"

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Settings/Controls/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ActionButton2" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_dkwi6")]
layout_mode = 2
size_flags_vertical = 7

[node name="ActionButton3" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_dkwi6")]
layout_mode = 2
size_flags_vertical = 7
action = "ui_down"

[node name="ActionButton4" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_dkwi6")]
layout_mode = 2
size_flags_vertical = 7
action = "ui_left"

[node name="ActionButton" parent="UI/Settings/Controls/HBoxContainer/VBoxContainer2" instance=ExtResource("3_dkwi6")]
layout_mode = 2
size_flags_vertical = 7
action = "ui_right"

[connection signal="pressed" from="UI/Settings/Niveles/GridContainer/Nivel1" to="UI/Settings/Niveles/GridContainer/Nivel1" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Niveles/GridContainer/Nivel2" to="UI/Settings/Niveles/GridContainer/Nivel2" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Niveles/GridContainer/Nivel3" to="UI/Settings/Niveles/GridContainer/Nivel3" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Niveles/GridContainer/Nivel4" to="UI/Settings/Niveles/GridContainer/Nivel4" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Niveles/GridContainer/Nivel5" to="UI/Settings/Niveles/GridContainer/Nivel5" method="_on_pressed"]
[connection signal="pressed" from="UI/Settings/Niveles/GridContainer/Nivel6" to="UI/Settings/Niveles/GridContainer/Nivel6" method="_on_pressed"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/FullScreen" to="UI/Settings/Video" method="_on_full_screen_toggled"]
[connection signal="toggled" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/Bordeless" to="UI/Settings/Video" method="_on_bordeless_toggled"]
[connection signal="item_selected" from="UI/Settings/Video/HBoxContainer/VBoxContainer2/Vsync" to="UI/Settings/Video" method="_on_vsync_item_selected"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Master" to="UI/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/Music" to="UI/Settings/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/HBoxContainer/VBoxContainer2/SFX" to="UI/Settings/Audio" method="_on_sfx_value_changed"]
